--- a/app/src/main/res/layout/linear_layout.xml
+++ b/app/src/main/res/layout/linear_layout.xml
@@ -4,17 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="horizontal">
+        android:text=""
+        android:textSize="30dp" />
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:background="@drawable/gradient"
-            android:orientation="vertical" >
-        </LinearLayout>>
-    </LinearLayout>
 </LinearLayout>
