--- a/app/src/main/res/layout/relativelayout.xml
+++ b/app/src/main/res/layout/relativelayout.xml
@@ -1,22 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Добро пожаловать в FlightScope"
+        android:textSize="25dp"/>
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:rotation="-23"
+        android:rotationX="-12"
+        android:rotationY="4"
+        app:srcCompat="@drawable/airplane" />
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginEnd="-249dp"
-        android:layout_toStartOf="@+id/button"
-        android:hint="Введите город" />
+        android:layout_centerVertical="true"
+        android:hint="Введите номер интересующего авиарейса" >
+    </EditText>
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Поиск" />
-
+        android:layout_centerVertical="true"
+        android:layout_below="@+id/editText"
+        android:text="Найти" >
+    </Button>
 </RelativeLayout>
