--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -6,7 +6,7 @@
         android:angle="90"
         android:endColor="#FFFFFF"
         android:centerColor="#FFFFFF"
-        android:startColor="#00BFFF"
+        android:startColor="#606060"
         />
 
 </shape>
