--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -4,9 +4,10 @@
 
     <gradient
         android:angle="90"
-        android:endColor="#FFFFFF"
-        android:centerColor="#FFFFFF"
-        android:startColor="#606060"
+        android:endColor="@color/white"
+        android:centerColor="@color/white"
+        android:startColor="@color/grey"
         />
 
 </shape>
+
