--- a/app/src/main/res/layout/constraint_layout.xml
+++ b/app/src/main/res/layout/constraint_layout.xml
@@ -14,7 +14,8 @@
         app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:srcCompat="@drawable/airplane" />
+        app:srcCompat="@drawable/airplane"
+        android:contentDescription="@string/test_logo" />
 
     <TextView
         android:id="@+id/textView2"
@@ -23,8 +24,8 @@
         android:layout_marginStart="35dp"
         android:layout_marginTop="57dp"
         android:layout_marginEnd="35dp"
-        android:text="Добро пожаловать в FlightScope"
-        android:textSize="25dp"
+        android:text="@string/flightscope"
+        android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,16 +33,16 @@
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="335dp"
+        android:layout_height="60dp"
         android:layout_centerVertical="true"
         android:layout_marginStart="35dp"
         android:layout_marginEnd="35dp"
-        android:hint="Введите номер авиарейса"
+        android:hint="@string/flightnumber"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"></EditText>
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <Button
         android:id="@+id/button2"
@@ -50,10 +51,9 @@
         android:layout_marginEnd="6dp"
         android:layout_marginBottom="276dp"
         android:backgroundTint="#000000"
-        android:text="Поиск"
+        android:text="@string/search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/editText"
         app:layout_constraintTop_toBottomOf="@+id/editText" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
