--- a/app/src/main/res/layout/activity_second_window.xml
+++ b/app/src/main/res/layout/activity_second_window.xml
@@ -4,15 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:rotationX="4"
-    tools:context=".MainActivity">
-
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView"
-        android:name="com.example.androidstudioproject.FirstWindowFragment"
-        android:layout_width="411dp"
-        android:layout_height="731dp"
-        tools:layout="@layout/fragment_first_window" />
+    tools:context=".SecondWindow">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
