--- a/app/src/main/res/layout/fragment_second_view.xml
+++ b/app/src/main/res/layout/fragment_second_view.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".SecondViewFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
